--- a/categories.html
+++ b/categories.html
@@ -15,8 +15,8 @@
     <section class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="#" title="Logo">
-                    <img src="images/logo.png" alt="Restaurant Logo" class="img-responsive">
+                <a href="index.html" title="Logo">
+                    <img style="width: 55px;height: 56px;" src="images/logo2.png" alt="Restaurant Logo" class="img-responsive">
                 </a>
             </div>
 
@@ -31,9 +31,7 @@
                     <li>
                         <a href="foods.html">Foods</a>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
 
@@ -51,96 +49,96 @@
 
             <a href="category-foods.html">
             <div class="box-3 float-container">
-                <img src="images/pizza.jpg" alt="Pizza" class="img-responsive img-curve">
+                <img src="images/ramen.jpg" alt="Ramen" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Pizza</h3>
+                <h3 class="float-text text-white">Ramen</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/burger.jpg" alt="Burger" class="img-responsive img-curve">
+                <img src="images/ice-cream2.jpg" alt="Ice Cream" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Burger</h3>
+                <h3 class="float-text text-white">Ice Cream</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
+                <img src="images/chicken-wings2.jpg" alt="Chicken Wings" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Momo</h3>
+                <h3 class="float-text text-white">Chicken Wings</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/pizza.jpg" alt="Pizza" class="img-responsive img-curve">
+                <img src="images/ramen.jpg" alt="Ramen" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Pizza</h3>
+                <h3 class="float-text text-white">Ramen</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/burger.jpg" alt="Burger" class="img-responsive img-curve">
+                <img src="images/ice-cream2.jpg" alt="Ice Cream" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Burger</h3>
+                <h3 class="float-text text-white">Ice Cream</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
+                <img src="images/chicken-wings2.jpg" alt="Chicken Wings" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Momo</h3>
+                <h3 class="float-text text-white">Chicken Wings</h3>
             </div>
             </a>
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/pizza.jpg" alt="Pizza" class="img-responsive img-curve">
+                <img src="images/ramen.jpg" alt="Ramen" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Pizza</h3>
-            </div>
-            </a>
-
-            <a href="#">
-            <div class="box-3 float-container">
-                <img src="images/burger.jpg" alt="Burger" class="img-responsive img-curve">
-
-                <h3 class="float-text text-white">Burger</h3>
+                <h3 class="float-text text-white">Ramen</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
+                <img src="images/ice-cream2.jpg" alt="Ice Cream" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Momo</h3>
+                <h3 class="float-text text-white">Ice Cream</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/pizza.jpg" alt="Pizza" class="img-responsive img-curve">
+                <img src="images/chicken-wings2.jpg" alt="Chicken Wings" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Pizza</h3>
+                <h3 class="float-text text-white">Chicken Wings</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/burger.jpg" alt="Burger" class="img-responsive img-curve">
+                <img src="images/ramen.jpg" alt="Ramen" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Burger</h3>
+                <h3 class="float-text text-white">Ramen</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
+                <img src="images/ice-cream2.jpg" alt="Ice Cream" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Momo</h3>
+                <h3 class="float-text text-white">Ice Cream</h3>
+            </div>
+            </a>
+
+            <a href="#">
+            <div class="box-3 float-container">
+                <img src="images/chicken-wings2.jpg" alt="Chicken Wings" class="img-responsive img-curve">
+
+                <h3 class="float-text text-white">Chicken Wings</h3>
             </div>
             </a>
 
@@ -173,7 +171,7 @@
     <!-- footer Section Starts Here -->
     <section class="footer">
         <div class="container text-center">
-            <p>All rights reserved. Designed By <a href="#">Vijay Thapa</a></p>
+            <p>All rights reserved. Designed By <a href="#">Maliha & Fariha</a></p>
         </div>
     </section>
     <!-- footer Section Ends Here -->
