--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <section class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="#" title="Logo">
-                    <img src="images/logo.png" alt="Restaurant Logo" class="img-responsive">
+                <a href="index.html" title="Logo">
+                    <img style="width: 55px;height: 56px;" src="images/logo2.png" alt="Restaurant Logo" class="img-responsive">
                 </a>
             </div>
 
@@ -31,9 +31,7 @@
                     <li>
                         <a href="foods.html">Foods</a>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
 
@@ -62,25 +60,25 @@
 
             <a href="category-foods.html">
             <div class="box-3 float-container">
-                <img src="images/pizza.jpg" alt="Pizza" class="img-responsive img-curve">
+                <img src="images/ramen.jpg" alt="Ramen" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Pizza</h3>
+                <h3 class="float-text text-white">Ramen</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/burger.jpg" alt="Burger" class="img-responsive img-curve">
+                <img src="images/ice-cream2.jpg" alt="Ice Cream" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Burger</h3>
+                <h3 class="float-text text-white">Ice Cream</h3>
             </div>
             </a>
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
+                <img src="images/chicken-wings2.jpg" alt="Chicken Wings" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Momo</h3>
+                <h3 class="float-text text-white">Chicken Wings</h3>
             </div>
             </a>
 
@@ -96,11 +94,11 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/chicken-wings7.jpg" alt="Chicken Hawain Wings" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
+                    <h4>Chicken Hawain Wings</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
@@ -113,86 +111,86 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-burger.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/ramen7.jpg" alt="Korean Ramen" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Smoky Burger</h4>
+                    <h4>Korean Ramen</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-burger.jpg" alt="Chicke Hawain Burger" class="img-responsive img-curve">
+                    <img src="images/ice-cream7.jpg" alt="Ice Cream" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Nice Burger</h4>
+                    <h4>Ice Cream</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/chicken-wings7.jpg" alt="Chicken Hawain Wings" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
+                    <h4>Chicken Hawain Wings</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/ramen7.jpg" alt="Korean Ramen" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
+                    <h4>Korean Ramen</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-momo.jpg" alt="Chicke Hawain Momo" class="img-responsive img-curve">
+                    <img src="images/ice-cream7.jpg" alt="Ice Cream" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Chicken Steam Momo</h4>
+                    <h4>Ice Cream</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
@@ -204,7 +202,7 @@
         </div>
 
         <p class="text-center">
-            <a href="#">See All Foods</a>
+            <a href="categories.html">See All Foods</a>
         </p>
     </section>
     <!-- fOOD Menu Section Ends Here -->
@@ -230,7 +228,7 @@
     <!-- footer Section Starts Here -->
     <section class="footer">
         <div class="container text-center">
-            <p>All rights reserved. Designed By <a href="#">Vijay Thapa</a></p>
+            <p>All rights reserved. Designed By <a href="#">Maliha & Fariha</a></p>
         </div>
     </section>
     <!-- footer Section Ends Here -->
