--- a/category-foods.html
+++ b/category-foods.html
@@ -15,8 +15,8 @@
     <section class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="#" title="Logo">
-                    <img src="images/logo.png" alt="Restaurant Logo" class="img-responsive">
+                <a href="index.html" title="Logo">
+                    <img style="width: 55px;height: 56px;" src="images/logo2.png" alt="Restaurant Logo" class="img-responsive">
                 </a>
             </div>
 
@@ -31,9 +31,7 @@
                     <li>
                         <a href="foods.html">Foods</a>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
+                   
                 </ul>
             </div>
 
