--- a/food-search.html
+++ b/food-search.html
@@ -15,8 +15,8 @@
     <section class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="#" title="Logo">
-                    <img src="images/logo.png" alt="Restaurant Logo" class="img-responsive">
+                <a href="index.html" title="Logo">
+                    <img style="width: 55px;height: 56px;" src="images/logo2.png" alt="Restaurant Logo" class="img-responsive">
                 </a>
             </div>
 
@@ -31,9 +31,7 @@
                     <li>
                         <a href="foods.html">Foods</a>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
 
@@ -46,7 +44,7 @@
     <section class="food-search text-center">
         <div class="container">
             
-            <h2>Foods on Your Search <a href="#" class="text-white">"Momo"</a></h2>
+            <h2>Foods on Your Search <a href="#" class="text-white">"Ice Cream"</a></h2>
 
         </div>
     </section>
@@ -61,103 +59,103 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/ramen.jpg" alt="Korean Ramen" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
+                    <h4>Korean Ramen</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-burger.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/ice-cream2.jpg" alt="Ice Cream" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Smoky Burger</h4>
+                    <h4>Ice Cream</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-burger.jpg" alt="Chicke Hawain Burger" class="img-responsive img-curve">
+                    <img src="images/chicken-wings2.jpg" alt="Chicken Hawain Wings" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Nice Burger</h4>
+                    <h4>Chicken Hawain Wings</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/ramen.jpg" alt="Korean Ramen" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
+                    <h4>Korean Ramen</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="images/ice-cream2.jpg" alt="Ice Cream" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
+                    <h4>Ice Cream</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/menu-momo.jpg" alt="Chicke Hawain Momo" class="img-responsive img-curve">
+                    <img src="images/chicken-wings2.jpg" alt="Chicken Hawain Wings" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Chicken Steam Momo</h4>
+                    <h4>Chicken Hawain Wings</h4>
                     <p class="food-price">$2.3</p>
                     <p class="food-detail">
                         Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
-                    <a href="#" class="btn btn-primary">Order Now</a>
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
                 </div>
             </div>
 
@@ -192,7 +190,7 @@
     <!-- footer Section Starts Here -->
     <section class="footer">
         <div class="container text-center">
-            <p>All rights reserved. Designed By <a href="#">Vijay Thapa</a></p>
+            <p>All rights reserved. Designed By <a href="#">Maliha & Fariha</a></p>
         </div>
     </section>
     <!-- footer Section Ends Here -->
